--- a/conf/config.yml
+++ b/conf/config.yml
@@ -1,1 +1,1 @@
-db_connection_string : mysql://divya2907:divya2907@localhost:3306/notesapplication
+db_connection_string : mysql://username:password@localhost:3306/notesapplication
